--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Kirill_Chystsin",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.12.11",
     "@types/pg": "^8.11.6",
@@ -19,7 +21,13 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@joi/date": "^2.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "fs-extra": "^11.2.0",
+    "joi": "^17.13.1",
     "pg": "^8.11.5",
     "xml-js": "^1.6.11"
   }
