--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-specifier-resolution=node  --loader ts-node/esm ./src/app.ts | npx pino-pretty",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "startprod": "node ./build/app.js | npx pino-pretty"
   },
   "author": "Kirill_Chystsin",
   "license": "ISC",
