Docker, smbTransport, configs

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "pg": "^8.11.5",
     "pino": "^9.1.0",
     "pino-pretty": "^11.1.0",
+    "samba-client": "^7.2.0",
+    "smbclient": "^1.0.3",
     "xml-js": "^1.6.11"
   }
 }
