--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 48659:48659
     environment:   
-      PINO_LOG_LEVEL: trace 
+      PINO_LOG_LEVEL: info 
 networks:
   default:
     external:
