logger refactor (write in file and terminal) change date (prototype)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
 
     volumes:
       - D:/tickets/files/:/tmp/tickets/files/
+      - D:/tickets/logs/:/var/log/ticket-services/
     ports:
       - 48659:48659
     environment:   
