--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "@joi/date": "^2.1.1",
+    "@types/config": "^3.3.4",
     "body-parser": "^1.20.2",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
