--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - D:/tickets/files/:/tmp/tickets/files/
       - D:/tickets/logs/:/var/log/ticket-services/
+      - ./src/config/:/build/config/
     ports:
       - 48659:48659
       - 48658:48658
