Add config and check archive count day

--- a/src/config/main-config.json
+++ b/src/config/main-config.json
@@ -4,6 +4,10 @@
         "ports": {
             "nemo": 48659,
             "travelline_hand": 48658
+        },
+        "transport":{
+            "local":true,
+            "smbserver":false
         }
     }
 }
