--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.12.11",
     "@types/pg": "^8.11.6",
+    "@types/xml2js": "^0.4.14",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
@@ -31,11 +32,13 @@
     "express-async-handler": "^1.2.0",
     "fs-extra": "^11.2.0",
     "joi": "^17.13.1",
+    "js-base64": "^3.7.7",
     "pg": "^8.11.5",
     "pino": "^9.1.0",
     "pino-pretty": "^11.1.0",
     "samba-client": "^7.2.0",
     "smbclient": "^1.0.3",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.6.2"
   }
 }
