Old configs removed and refactoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.2'
 services:
   tickets-service:
+    network_mode: "host"
     build:
       dockerfile: Dockerfile
 
@@ -8,12 +9,12 @@ services:
       - D:/tickets/files/:/tmp/tickets/files/
       - D:/tickets/logs/:/var/log/ticket-services/
       - ./src/config/:/build/config/
-    ports:
-      - 48659:48659
-      - 48658:48658
+    # ports:
+    #   - 48659:48659
+    #   - 48658:48658
     environment:   
-      PINO_LOG_LEVEL: info 
-networks:
-  default:
-    external:
-      name: zcts_default   
+      PINO_LOG_LEVEL: trace 
+# networks:
+#   default:
+#     external:
+#       name: host   
