--- a/src/config/main-config.json
+++ b/src/config/main-config.json
@@ -1,8 +1,8 @@
 {
     "main": {
         "transport":{
-            "local":false,
-            "smbserver":true
+            "local":true,
+            "smbserver":false
         },
         "loggerPath":"/var/log/ticket-services/",
         "loggerLevel":"info",
